--- a/views/admin/users/login.ejs
+++ b/views/admin/users/login.ejs
@@ -1,7 +1,7 @@
 <%- include('../../partials/header.ejs') -%>
 
-  <div class="container d-flex justify-content-center align-items-center" style="height: 100vh;">
-    <div class="card" style="max-width: 400px;">
+  <div class=" brl-center-box">
+    <div class="card">
       <div class="card-header">
         <h2>Login Admin</h2>
       </div>
