--- a/views/partials/navbar.ejs
+++ b/views/partials/navbar.ejs
@@ -1,4 +1,4 @@
-<nav class="navbar navbar-expand-lg bg-dark-subtle" >
+<nav class="navbar navbar-expand-lg brl-bg-gradient" data-bs-theme="dark">
   <div class="container">
     <a class="navbar-brand" href="/">Início</a>
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
@@ -7,6 +7,9 @@
     <div class="collapse navbar-collapse" id="navbarNav">
       <div class=" d-flex justify-content-between" style="width: 100%;">
         <ul class="navbar-nav">
+          <li class="nav-item">
+            <a class="nav-link"  href="https://www.brltech.com.br">BRLTech</a>
+          </li>
           <li class="nav-item">
             <a class="nav-link" aria-current="page" href="#contato">Contato</a>
           </li>
