ajustando blog, template e back

--- a/views/admin/articles/edit.ejs
+++ b/views/admin/articles/edit.ejs
@@ -38,9 +38,9 @@
                 
                 <div class="row mb-3">
                     <div class="col">
-                        <label for="img" class="form-label">Imagem de destaque</label>
+                        <label for="img" class="form-label">Imagem de destaque [Formato: <em>https://i.imgur.com/6Q16mHc.jpeg</em>] [Tamanho: <em>900x450px - jpg</em>]</label>
                         <input type="text" name="img" class="form-control mb-2" placeholder="URL" value="<%= article.img %>">
-                        <input type="text" name="alt" class="form-control" placeholder="Alt" alue="<%= article.alt %>">
+                        <input type="text" name="alt" class="form-control" placeholder="Alt" value="<%= article.alt %>">
                     </div>
                 </div>
 
