--- a/views/article.ejs
+++ b/views/article.ejs
@@ -4,9 +4,9 @@
 <!-- Banner -->
 <header class="banner">
     <div class="container-fluid pt-4 text-center">
-        <h1 class="mb-2"><%= article.title %></h1>
+        <h1 class="mb-2 fw-light"><%= article.title %></h1>
         <span>. . .</span>
-        <h2 class="fs-5 mb-4"><%= article.subTitle %></h2>
+        <h2 class="fs-5 mb-4 fw-light"><%= article.subTitle %></h2>
         <p class="text-body-tertiary">Por <em><%= article.author.nick %></em> | Atualizado em <em><%= article.createdAtFormat %></em></p>
     </div>
     <hr>
@@ -32,14 +32,14 @@
         <nav class="col col-12 col-md-3 mb-4">
             <div class="card shadow-sm">
                 <div class="card-header text-center">
-                    <h5>Mais sobre <a href="/categoria/<%= article.category.slug %>" class="link-primary link-underline-opacity-25 link-underline-opacity-100-hover"><%= article.category.title %></a></h5>
+                    <h3 class=" fw-light fs-5">Mais sobre <a href="/categoria/<%= article.category.slug %>" class="link-primary link-underline-opacity-25 link-underline-opacity-100-hover"><%= article.category.title %></a></h3>
                 </div>
                 <div class="card-body">
                     <div class="list-group">
                         <% category.articles.forEach(article => { %>
                             <a href="/blog/<%= article.slug %>" class="list-group-item list-group-item-action">
                                 <div class="d-flex w-100 justify-content-between">
-                                    <h5 class="mb-1"><%= article.title %></h5>
+                                    <h3 class="mb-1 fw-light fs-5"><%= article.title %></h3>
                                 </div>
                                 <p class="mb-1 text-truncate"><%= article.abstract %></p>
                             </a>
@@ -50,7 +50,7 @@
             <br>
             <div class="card shadow-sm">
                 <div class="card-header text-center">
-                    <h5>Outras categorias</h5>
+                    <h3 class=" fw-light fs-5">Outras categorias</h3>
                 </div>
                 <div class="card-body">
                     <ul class="list-group">
@@ -64,6 +64,17 @@
             </div>
         </nav>
     </div>
+</div>
+
+
+<!-- CONTATO -->
+<div id="contato" class="bg-body-secondary text-center" style="padding: 40px 10px 40px 10px">
+    <h3 class="fs-1 fw-light">Entre em Contato com a Gente pelo WhatsApp</h3>
+    <p class="lead text-body-secondary">Atendimento em Goiânia - GO, Aparecida de Goiânia - GO, Trindade - GO, Senador Canedo - GO, Aragoiânia - GO e Região.</p>
+    <p class="mt-4"><a class="btn btn-primary btn-lg btn-wpp" href="https://wa.me/message/3AFDV54LZ5NKN1" target="_blank"><i class="bi bi-whatsapp"></i> (62) 9 9669-1186</a></p>
+    <span class="text-body-secondary">Peça um <strong>orçamento sem compromisso!</strong> Responderemos em instantes.</span>
+    <p class="mb-4">. . .</p>
+    <p>Email: eng.if@outlook.com.br | CNPJ: 64.589.483/0001-94</p>
 </div>
 
 <%- include('partials/footer'); %>
