--- a/views/categories.ejs
+++ b/views/categories.ejs
@@ -4,8 +4,8 @@
 <!-- Banner -->
 <header class="banner bg-body-tertiary">
     <div class="container pt-5 pb-5 text-center">
-        <h1 class="mb-2">Tudo sobre <em><%= category.title %></em></h1>
-        <h2 class="fs-5">Navegue pelas conteudos e dicas mas comentados sobre <em><%= category.title %></em></h2>
+        <h1 class="mb-2 fw-light">Tudo sobre <em><%= category.title %></em></h1>
+        <h2 class="fs-5 lead text-body-secondary">Navegue pelas conteudos e dicas mas comentados sobre <em><%= category.title %></em></h2>
     </div>
 </header>
 
@@ -16,14 +16,25 @@
                 <div class="card mb-4 shadow-sm" style="overflow: hidden;">
                     <img src="<%= article.img %>" class="card-img-top img-fluid" alt="<%= article.alt %>" style="height: 250px; object-fit: cover;">
                     <div class="card-body">
-                        <h5 class="card-title"><%= article.title %></h5>
-                        <p class="card-text text-truncate"><%= article.abstract %></p>
+                        <h3 class="card-title fw-light fs-5"><%= article.title %></h3>
+                        <p class="card-text text-truncate lead text-body-secondary"><%= article.abstract %></p>
                         <p class="text-body-tertiary">Por <em><%= article.author.nick %></em>, <em>em <%= article.createdAtFormat %></em></p>
                         <a href="/blog/<%= article.slug %>" class="btn btn-primary stretched-link">Ler mais</a>
                     </div>
                 </div>
             <% }) %>
         </main>
+</div>
+
+
+<!-- CONTATO -->
+<div id="contato" class="bg-body-secondary text-center" style="padding: 40px 10px 40px 10px">
+    <h3 class="fs-1 fw-light">Entre em Contato com a Gente pelo WhatsApp</h3>
+    <p class="lead text-body-secondary">Atendimento em Goiânia - GO, Aparecida de Goiânia - GO, Trindade - GO, Senador Canedo - GO, Aragoiânia - GO e Região.</p>
+    <p class="mt-4"><a class="btn btn-primary btn-lg btn-wpp" href="https://wa.me/message/3AFDV54LZ5NKN1" target="_blank"><i class="bi bi-whatsapp"></i> (62) 9 9669-1186</a></p>
+    <span class="text-body-secondary">Peça um <strong>orçamento sem compromisso!</strong> Responderemos em instantes.</span>
+    <p class="mb-4">. . .</p>
+    <p>Email: eng.if@outlook.com.br | CNPJ: 64.589.483/0001-94</p>
 </div>
 
 <%- include('partials/footer'); %>
