--- a/public/css/blog.css
+++ b/public/css/blog.css
@@ -57,3 +57,20 @@ i {
     .brl-bg-ml {
         background-color: #FFE600;
     }
+
+
+/* PADRÕES ARTIGOS */
+.brl-article img {
+    width: 100% !important;
+    border-radius: 0.375rem;
+}
+
+.brl-article p:has(iframe) {
+    aspect-ratio: 16/9 !important;
+}
+
+.brl-article iframe {
+    width: 100% !important;
+    height: 100% !important;
+    border-radius: 0.375rem;
+}
